--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interaktif Periyodik Tablo</title>
     <style>
         body {
@@ -27,23 +28,23 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 100%;
         }
         .main-table, .lanthanide-actinide-table {
             display: grid;
             gap: 5px;
+            width: 100%;
         }
         .main-table {
-            grid-template-columns: repeat(18, 60px);
+            grid-template-columns: repeat(18, 1fr);
             grid-template-rows: repeat(7, 60px);
         }
         .lanthanide-actinide-table {
-            grid-template-columns: repeat(15, 60px);
+            grid-template-columns: repeat(15, 1fr);
             grid-template-rows: repeat(2, 60px);
             margin-top: 20px;
         }
         .element {
-            width: 60px;
-            height: 60px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -51,13 +52,15 @@
             position: relative;
             border: 1px solid #ccc;
             cursor: pointer;
+            font-size: 12px;
+            padding: 5px;
         }
         .symbol {
-            font-size: 20px;
+            font-size: 16px;
             font-weight: bold;
         }
         .number {
-            font-size: 12px;
+            font-size: 10px;
         }
         .tooltip {
             display: none;
@@ -76,12 +79,71 @@
             display: block;
         }
         .element.yes { background-color: #90EE90; } /* Solgun yeşil */
-        .element.maybenot { background-color: #008000; } /* Yeşil */
+        .element.maybenot { background-color: #008000; color: white; } /* Koyu yeşil, yazı beyaz */
         .element.dont { background-color: #FFFF00; } /* Sarı */
-        .element.deadly { background-color: #FF0000; } /* Kırmızı */
+        .element.deadly { background-color: #FF0000; color: white; } /* Kırmızı, yazı beyaz */
         .yes { color: #006400; font-weight: bold; } /* Koyu yeşil */
         .maybenot { color: #008000; font-weight: bold; } /* Yeşil */
         .dont { color: #FFA500; font-weight: bold; } /* Turuncu */
+
+        /* Responsive Tasarım */
+        @media (max-width: 1200px) {
+            .main-table {
+                grid-template-rows: repeat(7, 50px);
+            }
+            .lanthanide-actinide-table {
+                grid-template-rows: repeat(2, 50px);
+            }
+            .element {
+                font-size: 10px;
+            }
+            .symbol {
+                font-size: 14px;
+            }
+            .number {
+                font-size: 8px;
+            }
+        }
+        @media (max-width: 768px) {
+            .main-table {
+                grid-template-columns: repeat(18, 40px);
+                grid-template-rows: repeat(7, 40px);
+            }
+            .lanthanide-actinide-table {
+                grid-template-columns: repeat(15, 40px);
+                grid-template-rows: repeat(2, 40px);
+            }
+            .element {
+                font-size: 8px;
+                padding: 2px;
+            }
+            .symbol {
+                font-size: 12px;
+            }
+            .number {
+                font-size: 6px;
+            }
+        }
+        @media (max-width: 480px) {
+            .main-table {
+                grid-template-columns: repeat(18, 30px);
+                grid-template-rows: repeat(7, 30px);
+            }
+            .lanthanide-actinide-table {
+                grid-template-columns: repeat(15, 30px);
+                grid-template-rows: repeat(2, 30px);
+            }
+            .element {
+                font-size: 6px;
+                padding: 1px;
+            }
+            .symbol {
+                font-size: 10px;
+            }
+            .number {
+                font-size: 5px;
+            }
+        }
     </style>
 </head>
 <body>
