--- a/index.html
+++ b/index.html
@@ -63,28 +63,37 @@
             font-size: 10px;
         }
         .tooltip {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #fff;
-            border: 1px solid #000;
-            padding: 5px;
-            z-index: 10;
-            width: 250px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-        }
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff; /* Beyaz arka plan */
+    border: 1px solid #000;
+    padding: 5px;
+    z-index: 10;
+    width: 250px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    color: black; /* Tooltip içindeki metinler siyah */
+}
         .element:hover .tooltip {
             display: block;
         }
         .element.yes { background-color: #90EE90; } /* Solgun yeşil */
-        .element.maybenot { background-color: #008000; color: white; } /* Koyu yeşil, yazı beyaz */
+        .element.maybenot { background-color: #008000; /* Koyu yeşil */}
         .element.dont { background-color: #FFFF00; } /* Sarı */
-        .element.deadly { background-color: #FF0000; color: white; } /* Kırmızı, yazı beyaz */
+        .element.deadly { background-color: #FF0000; /* Kırmızı */}
         .yes { color: #006400; font-weight: bold; } /* Koyu yeşil */
         .maybenot { color: #008000; font-weight: bold; } /* Yeşil */
         .dont { color: #FFA500; font-weight: bold; } /* Turuncu */
+
+        /* Element kutucuklarındaki sembol ve numara için beyaz renk */
+.element.maybenot .symbol, .element.maybenot .number {
+    color: white;
+}
+.element.deadly .symbol, .element.deadly .number {
+    color: white;
+}
 
         /* Responsive Tasarım */
         @media (max-width: 1200px) {
